@@ -6,6 +6,11 @@ xx/xx/xxxx - 1.12.0-WIP
 	  ntfs_inode_open.  Update ntfsmount to use them.  (Yura)
 	- index.c::ntfs_index_lookup: fix bug when index context didn't point
 	  on index root in which entry located.  (Yura)
+	- ntfsresize: relocate_attributes(): don't stop processing of MFT 
+	  record attributes at AT_DATA of $BadClus and $Bitmap. In practice, 
+	  there aren't non-resident attributes after them so this bug,
+	  introduced in 1.11.0, shouldn't have ever caused data loss.  (Szaka)
+	- ntfsresize: support relocation of $MFT with $ATTRIBUTE_LIST. (Szaka)
 
 20/07/2005 - 1.11.1 - Fix several ntfsmount bugs.
 
